# AgentCore

./: README.md  app.py  daily_summary_job.py  pyproject.toml  requirements.txt  robot_problems.csv  start.sh
Settings/: prompts.py  state.py  tools.py
agent/: graph.py
agent/eval/: rag_eval.py  rag_eval_ragas.py
docker/: docker-compose.yml  dockerfile  readme.md
helpers/: fetch_user.py
image_retrieval/: image_parser.py  image_pipeline.py  sbFileUploadAssistant.py
rag/: db_access.py  rag_logic.py  sbFileUploadAssistant.py
robot_vector_db/: chroma.sqlite3
tunning/: training_model.py
