[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcore"
version = "1.0.0"
dependencies = [
  "langgraph>=0.2.6",
  "langgraph-cli[inmem]>=0.2.8",
  "langchain-openai>=0.2.0",
  "python-dotenv>=1.0.1",
  "langchain-community>=0.2",
  "langchain-chroma>=0.1.2",
  "chromadb>=0.5",
]
[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1", "pytest>=8.3.5"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "rag*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = ["E","F","I","D","D401","T201","UP"]
lint.ignore = ["UP006","UP007","UP035","D417","E501"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D","UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
